[gd_scene load_steps=3 format=1]

[ext_resource path="res://scenes/gui/main_theme.tres" type="Theme" id=1]
[ext_resource path="res://scripts/gui/pausemenu.gd" type="Script" id=2]

[node name="PauseMenu" type="PopupPanel"]

process/pause_mode = 2
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
theme/theme = ExtResource( 1 )
margin/left = 0.0
margin/top = 0.0
margin/right = 118.0
margin/bottom = 158.0
popup/exclusive = false
script/script = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 2.0
margin/top = 2.0
margin/right = 2.0
margin/bottom = 2.0
custom_constants/separation = 16
alignment = 1

[node name="Label" type="Label" parent="VBoxContainer"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 24.0
margin/right = 114.0
margin/bottom = 33.0
text = "PAUSE MENU"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Score" type="Label" parent="VBoxContainer"]

visibility/visible = false
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 37.0
margin/right = 114.0
margin/bottom = 46.0
text = "Score: 1000 !"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="ResumeButton" type="Button" parent="VBoxContainer"]

rect/min_size = Vector2( 0, 16 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 0
size_flags/vertical = 2
margin/left = 36.0
margin/top = 49.0
margin/right = 77.0
margin/bottom = 65.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Resume"
flat = false

[node name="RestartButton" type="Button" parent="VBoxContainer"]

rect/min_size = Vector2( 0, 16 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 0
size_flags/vertical = 2
margin/left = 20.0
margin/top = 81.0
margin/right = 94.0
margin/bottom = 97.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Restart Level"
flat = false

[node name="MainMenuButton" type="Button" parent="VBoxContainer"]

rect/min_size = Vector2( 0, 16 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 0
size_flags/vertical = 2
margin/left = 28.0
margin/top = 113.0
margin/right = 85.0
margin/bottom = 129.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Main Menu"
flat = false

[connection signal="pressed" from="VBoxContainer/ResumeButton" to="." method="_on_ResumeButton_pressed"]

[connection signal="pressed" from="VBoxContainer/RestartButton" to="." method="_on_RestartButton_pressed"]

[connection signal="pressed" from="VBoxContainer/MainMenuButton" to="." method="_on_MainMenuButton_pressed"]


